@@ -2,7 +2,7 @@
  *
  * Nagios Main Header File
  * Written By: Ethan Galstad (nagios@nagios.org)
- * Last Modified: 04-13-2003
+ * Last Modified: 04-29-2003
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -503,6 +503,8 @@ int write_to_log(char *,unsigned long);                	/* write a string to the
 int write_to_syslog(char *,unsigned long);             	/* write a string to the syslog facility */
 int log_service_event(service *,int);			/* logs a service event */
 int log_host_event(host *);				/* logs a host event */
+int log_initial_host_states(void);	                /* logs initial host states */
+int log_initial_service_states(void);                   /* logs initial service states */
 int rotate_log_file(time_t);			     	/* rotates the main log file */
 int write_log_file_info(void);	 			/* records log file/version info */
 
